modules/cli/src/test/resources/good/safety/orphan/twoparty/Test01.scr
module good.safety.orphan.twoparty.Test01;


global protocol Proto1(role A, role B)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			continue X;
		}
		or
		{
			1() from A to B;
			1() from A to B;
			continue X;
		}
	}
}


